<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/app_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_description"
            android:textSize="12sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Score"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lblChance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text="Chances"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtChance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btnAnswer0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:text="0"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAnswer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:text="1"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAnswer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:text="2"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAnswer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:text="3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblCorrectAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_again" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>